@@ -2,6 +2,7 @@ Jython NEWS
 
 Jython 2.5.3b2
   Bugs Fixed
+    - [ 1829 ] test_socket.py failing on Ubuntu (Oneiric)
     - [ 1844 ] bad host returned by getsockname
 
 Jython 2.5.3b1
